xine-ui (0.9.22) unstable; urgency=low

  * reload old playlist if no MRL is given (can be turned off).
  * new widget, double box,
  * font caching (+fix) and cleanups from Frantisek Dvorak,
  * change policy of created widget, all non skinned are disabled and hidden,
  * new window: post plugin chain, aka "chain reaction",
  * support gxine playlist format,
  * support new audio event from the lib,
  * fix window stacking bug while switching output modes (windowed/fullscreen),
  * don't show up mouse cursor on keyboard action,
  * network control can manage loop modes,
  * fix crash when pressing 'm' or 'n' with empty playlist
	
xine-ui (0.9.21) unstable; urgency=low

  * fix playlist handling bug.
  * closing an xitk window don't crash xine anymore,
  * clicking on audio/spu language in main panel popup a language selection menu,
  * use ISO639-1 to display DVD audio/spu language ('en' -> 'english'),
  * support 32 audio/spu channels,
  * --enqueue can enqueue more than one mrl,
  * get rid of completion event,
  * new error message, according to xine-lib message events,
  * fix reparent bug with KDE 3.1,
  * (re)add cfg:/ style mrls, you can change any config entry BEFORE playing any
      kind of mrl,
  * fix snapshot size bug, xine-lib don't fill meta data, so we have to
      workaround,
  * change behavior of number key, they aren't binded for seeking, you
      have to press 3 key for any % seek (use option below if you think that
      suck, like me),
  * new --keymap=<keymap file> option,
  * add lirc commands for hue/saturation/brightness/contrast controls,
  * improve seeking,
  * support "resume" feature with DVD playback (<ESC> key),
  * new translation: italian,
  * fix metacity layer bug,
  * new --config option,
  * fix warp jump and double click bug in widget browser,
  * fix deadlock with panel hide/show cycle,
  * playback slider don't handle keyboard events (fix seek weirdness),
  * .po updates.
	
xine-ui (0.9.20) unstable; urgency=low
