@@ -49,24 +49,16 @@ void xitk_font_cache_done(void);
 xitk_font_t *xitk_font_load_font(Display *display, char *font);
 
 /*
+ * Draw the string with given font.
+ */
+void xitk_font_draw_string(xitk_font_t *xtfs, Pixmap pix, GC gc, 
+			   int x, int y, const char *text, 
+			   size_t nbytes);
+
+/*
  * Unload (free memory) font.
  */
 void xitk_font_unload_font(xitk_font_t *xtfs);
-
-/*
- * Return font ID (X).
- */
-Font xitk_font_get_font_id(xitk_font_t *xtfs);
-
-/*
- * Is font is 8 bits encoded.
- */
-int xitk_font_is_font_8(xitk_font_t *xtfs);
-
-/*
- * Is fon is 16 bits encoded.
- */
-int xitk_font_is_font_16(xitk_font_t *xtfs);
 
 /*
  * Return width (in pixel) of a string with length length.
@@ -79,14 +71,16 @@ int xitk_font_get_text_width(xitk_font_t *xtfs, const char *c, int length);
 int xitk_font_get_string_length(xitk_font_t *xtfs, const char *c);
 
 /*
- * Return the char width (in pixel).
+ * Return the char width (in pixel),
+ * if nbytes != NULL returns there size of multibyte character in bytes.
  */
-int xitk_font_get_char_width(xitk_font_t *xtfs, unsigned char *c);
+int xitk_font_get_char_width(xitk_font_t *xtfs, char *c, int maxnbytes, int *nbytes);
 
 /*
  * Return the height (in pixel) of string, with length length.
+ * if nbytes != NULL returns there size of multibyte character in bytes.
  */
-int xitk_font_get_text_height(xitk_font_t *xtfs, const char *c, int length);
+int xitk_font_get_text_height(xitk_font_t *xtfs, const char *c, int nbytes);
 
 /*
  * Return string height (in pixel) of string.
@@ -96,7 +90,7 @@ int xitk_font_get_string_height(xitk_font_t *xtfs, const char *c);
 /*
  * Return char height (in pixel).
  */
-int xitk_font_get_char_height(xitk_font_t *xtfs, unsigned char *c);
+int xitk_font_get_char_height(xitk_font_t *xtfs, char *c, int maxnbytes, int *nbytes);
 
 /*
  * Get text extents of string length length.
