@@ -1,8 +1,9 @@
 xine-ui (0.9.22) unstable; urgency=low
 
+  * multibyte string support from Frantisek Dvorak,
   * reload old playlist if no MRL is given (can be turned off).
   * new widget, double box,
-  * font caching (+fix) and cleanups from Frantisek Dvorak,
+  * font caching and cleanups from Frantisek Dvorak,
   * change policy of created widget, all non skinned are disabled and hidden,
   * new window: post plugin chain, aka "chain reaction",
   * support gxine playlist format,
